[gd_scene load_steps=4 format=3 uid="uid://cdstvg1e5a7mn"]

[ext_resource type="Script" path="res://AccountOptions.gd" id="1_cvx7j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45gew"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.141176, 0.14902, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4wm2"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 0.360784, 0.603922, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvx7j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = SubResource("StyleBoxFlat_45gew")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Account Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "General"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Marketplace"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Subscription"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Advanced"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="LogOut" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Log Out"

[node name="Closeaccount" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Close"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Display Name"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Email"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3/HBoxContainer"]
layout_mode = 2
text = "Change Email"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
alignment = 1

[node name="DeleteAccount" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.372549, 0.286275, 1)
text = "Delete Account"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Subscription"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_45gew")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer"]
layout_mode = 2

[node name="SubEmail" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "EMAIL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SubPayment" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Payment: "

[node name="StripeDashboard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -15.0
offset_right = -10.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "Dashboard"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_45gew")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Sub1Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Account Details"
vertical_alignment = 1

[node name="Sub1Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name: "
vertical_alignment = 1

[node name="Sub1Label3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Email: "
vertical_alignment = 1

[node name="Sub1Label4" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Billing Address: "
vertical_alignment = 1

[node name="Sub1Label5" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Account Created: "
vertical_alignment = 1

[node name="SubSelect1" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4wm2")

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxFlat_45gew")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CurrentSubType" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "PRODUCT NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentSubPrice" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.654902)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "£0.00/Month"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CurrentSubDescription" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NextSubCycle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Subscribtion Ends: 20/02/23"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SubButton3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
text = "Invoices"

[node name="SubSelect3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer/Panel3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4wm2")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[connection signal="button_up" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/LogOut" to="." method="_on_log_out_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Closeaccount" to="." method="_on_closeaccount_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/DeleteAccount" to="." method="_on_delete_account_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer3/Panel/StripeDashboard" to="." method="_on_stripe_dashboard_button_up"]
